apps/kopiur-system/kopiur-repository/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia-primary-kopia-ui
  namespace: kopiur-system
spec:
  hostnames:
    - kopia.darkflame.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kopia-primary-kopia-ui
          port: 51515
      matches:
        - path:
            type: PathPrefix
            value: /
